--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,8 @@
         </div>
       </nav>
      </header>
-     <%= yield %>
+     <div class="container">        
+       <%= yield %>
+     </div>
   </body>
 </html>
