Add user sign in feature

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,14 @@
               </ul>
               <ul class="nav navbar-nav navbar-right">
                 <li><%= link_to "Sign up", new_user_registration_path %></li>
+                <li><%= link_to "Sign in", new_user_session_path %></li>
+                <% if user_signed_in? %>
+                  <div class="navbar-right">
+                    <p class="navbar-text">
+                      Signed in as <%= "#{current_user.email}" %>
+                    </p>
+                  </div>
+                <% end %>
               </ul>
           </div>
         </div>  
@@ -37,7 +45,7 @@
            <a href="#" class='close' data-dismiss='alert' &#215;></a>
            <%= content_tag :div, msg, :id => "flash_#{name}" if msg.is_a?(String) %>
            <% end %>
-       <%= yield %>
+       <%= yield %> 
      </div>
   </body>
 </html>
